Added the voice assistant, fixing voice capture

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <option value="es-ES">Spanish</option>
   </select>
 
+  <!-- Controls -->
+  <button id="startBtn">Start Assistant</button>
+  <button id="muteBtn">Mute Voice</button>
+  <div id="micIndicator" class="mic-indicator"></div>
+
   <!-- Dynamic Form -->
   <form id="userForm"></form>
 
